--- a/execution_app/static/css/execution.css
+++ b/execution_app/static/css/execution.css
@@ -283,7 +283,7 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-
+    align-items: center;
     gap: 15px;
 
     width: 920px;
