--- a/classroom_app/static/css/classrooms.css
+++ b/classroom_app/static/css/classrooms.css
@@ -68,6 +68,7 @@ main {
 }
 .create-form h3 {
     font-size: 16px;
+    color: #e92c2c;
 }
 .create-form div {
     display: flex;
@@ -132,4 +133,20 @@ input::-webkit-inner-spin-button {
 .hideform {
     opacity: 0;
     visibility: hidden;
+}
+#add {
+    width: 100%;
+    height: 40px;
+    background-color: #1ca700;
+    border: none;
+    border-radius: 10px;
+    color: white;
+    font-family: "inter";
+    font-size: 16px;
+    cursor: pointer;
+    transition: all 0.3s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 15px;
 }
