--- a/project/static/css/base_admin.css
+++ b/project/static/css/base_admin.css
@@ -166,6 +166,11 @@ h1{
     font-size: 20px;
     color: white;
 }
+.firstNav {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
 .secondNav a img{
     width: 90%;
     height: 100%;
@@ -175,7 +180,6 @@ h1{
     width: 40px;
 }
 .secondNav a{
-    font-family: "Inter";
     font-size: 16px;
     color: white;
     text-decoration: none;
@@ -188,6 +192,7 @@ h1{
     padding: 5px 15px;
     border: white 1px solid;
     border-radius: 10px;    
+    background: none;
 }
 .ai-text {
     color: #B26FFF;
