--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -4,6 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{% block title %}  {% endblock %} | GPTQuiz</title>
         {% block head %}  {% endblock %}
+        <link rel="icon" type="image/svg+xml" href="{{ url_for('static', filename='images/atom.svg') }}">
         <link rel="stylesheet" href="{{ url_for('static', filename= 'css/base.css') }}">
     </head>
     <body>
