--- a/project/templates/base_student.html
+++ b/project/templates/base_student.html
@@ -3,6 +3,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{% block title %}  {% endblock %} | GPTQuiz</title>
+        <link rel="icon" type="image/svg+xml" href="{{ url_for('static', filename='images/atom.svg') }}">
         <link rel="stylesheet" href="{{ url_for('static', filename= 'css/base_student.css') }}">
         {% block head %} {% endblock %}
     </head>
