--- a/execution_app/templates/enter_nickname.html
+++ b/execution_app/templates/enter_nickname.html
@@ -323,7 +323,7 @@
                             uploadAnswer(finalAnswer, data.id);
                         };
 
-                        answersDiv.appendChild(sendBtn);
+                        generalDiv.appendChild(sendBtn);
                     } else {
                         const btn1 = document.createElement('button');
                         const btn2 = document.createElement('button');
