--- a/classroom_app/templates/class.html
+++ b/classroom_app/templates/class.html
@@ -16,19 +16,22 @@
     <main> 
         <input type="hidden" id="classroomId" value="{{ classroom.id }}">
         <div>
-            <div class="addnewclass">
-                <button id="add">Додайте нового учня!</button>
-            </div>
         </div>
-        <div class="studentsContainer">
-            <h3 style="color: white;">Ваші учні:</h3>
-            <ol>
-                {% for student in classroom.students %}
-                    <li class="studentContainer">
-                        <a href="/classrooms/student/{{ student.id }}" class="student">{{ student.login }}: {{ student.surname }} {{ student.name }}</a>
-                    </li>
-                {% endfor %}
-            </ol>
+        <div class="table">
+            <div class="header-classroom">
+                <div class="tabs">
+                    <button class="tab selected" id="general">Учні</button>
+                    <button class="tab not" id="graphic">Успішність</button>
+                    <div class="addnewclass">
+                        <button id="add">Додати нового учня</button>
+                    </div>
+                </div>
+            </div>
+            {% for student in classroom.students %}
+                <div class="studentContainer">
+                    <a href="/classrooms/student/{{ student.id }}" class="student">{{ student.login }}: {{ student.surname }} {{ student.name }}</a>
+                </div>
+            {% endfor %}
         </div>
     </main>
     <form id="form" class="create-form {% if not errors %}hideform{% endif %}" method="post">
