--- a/classroom_app/static/css/class.css
+++ b/classroom_app/static/css/class.css
@@ -8,10 +8,6 @@ main {
     align-items: center;
     padding: 20px;
 }
-main div div {
-    display: flex;
-    gap: 10px;
-}
 main p {
     color: white;
     opacity: 0.8;
@@ -179,20 +175,150 @@ input::-webkit-inner-spin-button {
     justify-content: center;
     padding: 0 15px;
 }
-.studentsContainer {
-    position: relative;
-    width: 100%;
-}
-.studentsContainer ol{
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    padding: 15px;
-}
 .studentContainer {
     color: white;
+    display: grid;
+    grid-template-columns: 300px 1fr;
+    border-top: 2px solid #2b2b2b;
+    align-items: center;
+    gap: 10px;
+}
+.student-start {
+    display: grid;
+    grid-template-columns: 40px 1fr;
+    padding: 10px 15px;
+    gap: 10px;
+}
+.studentContainer h3 {
+    font-size: 18px;
+    font-weight: 400;
 }
 .student {
     color: white;
     text-decoration: underline;
+}
+.students {
+    position: relative;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    border-radius: 20px;
+    border: 2px solid #2b2b2b;
+    overflow: hidden;
+}
+.content {
+    display: flex;
+    flex-direction: column;
+    gap: 0;
+}
+.number {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.header-students {
+    padding: 10px 15px;
+    display: grid;
+    grid-template-columns: 300px 1fr;
+    height: 44px;
+    width: 100%;
+    gap: 20px;
+    background-color: #212121;
+    gap: 10px;
+}
+.header-students h3 {
+    color: white;
+}
+.header-start {
+    display: grid;
+    grid-template-columns: 40px 1fr;
+    gap: 10px;
+}
+.students.hide {
+    display: none;
+}
+.chart-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+.chart-container.hide {
+    display: none;
+}
+.chart-container h3 {
+    text-align: center;
+    color: #FFF;
+    margin-bottom: 15px;
+    font-size: 1.2rem;
+}
+.apexcharts-toolbar {
+    z-index: 3 !important;
+}
+
+.stats {
+    display: flex;
+    flex-direction: column;
+}
+.stats h1 {
+    text-align: center;
+    color: white;
+}
+.controls-container {
+    margin-bottom: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px;
+    justify-content: center;
+    align-items: center;
+}
+
+.controls-container p {
+    color: white;
+}
+
+.date-input {
+    padding: 10px;
+    border-radius: 8px;
+    border: 1px solid #ddd;
+    outline: none;
+    transition: border 0.3s;
+}
+
+.date-input:focus {
+    border-color: #008FFB;
+}
+
+.update-btn {
+    padding: 10px 25px;
+    cursor: pointer;
+    background: #008FFB;
+    color: #fff;
+    border: none;
+    border-radius: 8px;
+    font-weight: bold;
+    transition: opacity 0.2s;
+}
+
+.update-btn:hover {
+    opacity: 0.8;
+}
+
+.charts-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr; 
+    gap: 25px;
+    padding: 20px;
+}
+
+.chart-card {
+    width: 100%;
+    background: #212121;
+    padding: 20px;
+    border-radius: 15px;
+    flex-direction: column;
+}
+#successfulRate {
+    width: 100% !important;
+    flex-grow: 1;
 }
