Added donut chart at execution quiz on teacher view

--- a/student_app/templates/student_report.html
+++ b/student_app/templates/student_report.html
@@ -14,7 +14,7 @@
             </a>
             <div class="links">
                 <a href="/execution/" class="enter-code">Код</a>
-                <a href="/student/" class="login">Додому</a>
+                <a href="/" class="login">Додому</a>
             </div>
         </header>
         
@@ -50,7 +50,7 @@
                 <div class="grade">
                     <h4>Оцінка</h4>
                     <div>
-                        <span>{{ gradef }}</span>
+                        <span>{{ report.grade }}</span>
                         <span>/</span>
                         <span>12</span>
                     </div>
