--- a/host_app/templates/hosting.html
+++ b/host_app/templates/hosting.html
@@ -62,7 +62,8 @@
         </div>
         <div id="Wblur" class="hideblur"></div>
 
-        
+        <script src="{{ url_for('static', filename= 'js/ApexCharts.js') }}"></script>
+        <script src="{{ url_for('host_app.static', filename='js/donut_chart.js') }}"></script>
         <script>
             const socket = io();
             const code = "{{ code }}"; 
@@ -130,6 +131,9 @@
                 console.log("Received teacher_results:", data.results);
                 div.innerHTML = ""
                 const avatarUrl = "{{ url_for('host_app.static', filename='images/avatar.svg') }}";
+                const studentsContainer = document.createElement("div")
+                studentsContainer.classList.add("studentsContainer")
+
                 data.results.forEach(res => {
                     const divA = document.createElement("div");
                     divA.classList.add("student-answer")
@@ -150,11 +154,60 @@
                             }
                         </div>
                     `;
-                    container.appendChild(divA);
+                    studentsContainer.appendChild(divA);
                 });
-
+                const diagramContainer = document.createElement("div")
+                diagramContainer.classList.add("diagramContainer")
+                const chartContainer = document.createElement("div")
+                chartContainer.id = "chart"
+                const dataAnswersContainer = document.createElement("div")
+                dataAnswersContainer.classList.add("dataAnswersContainer")
+                //
+                const correctContainer = document.createElement("div")
+                correctContainer.classList.add("dataTexts")
+                const wrongContainer = document.createElement("div")
+                wrongContainer.classList.add("dataTexts")
+                const skippedContainer = document.createElement("div")
+                skippedContainer.classList.add("dataTexts")
+                //
+                const correctImg = document.createElement("img")
+                correctImg.src = "{{ url_for('host_app.static', filename= 'images/correct_answers.svg') }}"
+                correctContainer.appendChild(correctImg)
+                const wrongImg = document.createElement("img")
+                wrongImg.src = "{{ url_for('host_app.static', filename= 'images/wrong_answers.svg') }}"
+                wrongContainer.appendChild(wrongImg)
+                const skippedImg = document.createElement("img")
+                skippedImg.src = "{{ url_for('host_app.static', filename= 'images/skipped_answers.svg') }}"
+                skippedContainer.appendChild(skippedImg)
+                //
+                const correctText = document.createElement("h4")
+                correctText.textContent = `Правильно: ${data.donut_data.correct}/${data.donut_data.total_participiants}`
+                correctContainer.appendChild(correctText)
+                const wrongText = document.createElement("h4")
+                wrongText.textContent = `Неправильно: ${data.donut_data.wrong}/${data.donut_data.total_participiants}`
+                wrongContainer.appendChild(wrongText)
+                const skippedText = document.createElement("h4")
+                skippedText.textContent = `Пропущено: ${data.donut_data.skipped}/${data.donut_data.total_participiants}`
+                skippedContainer.appendChild(skippedText)
+                const summaryPercentage = document.createElement("h4")
+                summaryPercentage.classList.add("percentage")
+                summaryPercentage.textContent = `${((data.donut_data.correct / data.donut_data.total_participiants) * 100).toFixed(0)}%`
                 
+                diagramContainer.appendChild(chartContainer)
+                diagramContainer.appendChild(summaryPercentage)
+                dataAnswersContainer.appendChild(diagramContainer)
+                dataAnswersContainer.appendChild(correctContainer)
+                dataAnswersContainer.appendChild(wrongContainer)
+                dataAnswersContainer.appendChild(skippedContainer)
+                
+                container.appendChild(dataAnswersContainer)
+                container.appendChild(studentsContainer)
                 console.log(data)
+                renderDonut(data1 = {
+                    correct: data.donut_data.correct,
+                    wrong: data.donut_data.wrong,
+                    skipped: data.donut_data.skipped
+                })
                 if (data.index_question == data.total_questions-1) {
                     nextBtn.innerText = "Кінець";
                     nextBtn.onclick = () => socket.emit("quiz_end_msg", { code: code });
@@ -162,8 +215,6 @@
                     nextBtn.onclick = () => socket.emit("next_question", { code: code });
                 }
             });
-
-            
 
             let endTime = 0;
             socket.on("question_timer", (data) => {
