Added loading gif after end quiz, about 1s you will wait for submit for all students their report

--- a/host_app/templates/hosting.html
+++ b/host_app/templates/hosting.html
@@ -344,6 +344,9 @@
                 document.body.appendChild(endBtn);
             });
             socket.on("end_msg", data => {
+                nextBtn.innerHTML = `
+                    <img src="{{ url_for('host_app.static', filename= 'gifs/loading.gif') }}" style="height: 20px; width: 20px;">
+                `
                 socket.emit("show_quiz_results", {code: code})
             }) 
 
@@ -353,7 +356,6 @@
                     window.location.href = `${data.url}`;
                 }
             });
-            
         </script>
         <script src="{{ url_for('host_app.static', filename='js/copy.js') }}"></script>
     </body>
