--- a/reports_app/static/css/detail_report.css
+++ b/reports_app/static/css/detail_report.css
@@ -402,3 +402,32 @@
     color: #fff;
     font-weight: 500;
 }
+.tab-content.hide {
+    display: none;
+}
+.questions-container > div {
+    display: flex;
+    flex-direction: column;
+    background-color: #323232;
+    padding: 15px;
+    border-radius: 15px;
+    gap: 10px;
+}
+.questions-container div h3 {
+    font-weight: 500;
+    font-size: 20px;
+    height: 48px;
+}
+.questions-block {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 10px;
+}
+.question-block {
+    font-weight: 500;
+    font-size: 16px;
+    background-color: #656565;
+    padding: 5px 7px;
+    border-radius: 5px;
+}
