--- a/reports_app/static/css/detail_report.css
+++ b/reports_app/static/css/detail_report.css
@@ -405,6 +405,9 @@
 .tab-content.hide {
     display: none;
 }
+.questions-container {
+    width: 100%;
+}
 .questions-container > div {
     display: flex;
     flex-direction: column;
