--- a/reports_app/templates/detail_report.html
+++ b/reports_app/templates/detail_report.html
@@ -30,6 +30,7 @@
                     <div class="question-block">Земля</div>
                     <div class="question-block">Земля</div>
                     <div class="question-block">Земля</div>
+                    <div class="question-block">Земля</div>
                 </div>
             </div>
         </div>
@@ -105,6 +106,7 @@
 <script src="{{ url_for('static', filename= 'js/ApexCharts.js') }}"></script>
 <script src="{{ url_for('reports_app.static', filename='js/sort.js') }}"></script>
 <script src="{{ url_for('reports_app.static', filename='js/room_charts.js') }}"></script>
+<script src="{{ url_for('reports_app.static', filename='js/getQuestions.js') }}"></script>
 <script src="{{ url_for('reports_app.static', filename='js/loadInfoStudent.js') }}"></script>
 <script src="{{ url_for('reports_app.static', filename='js/switch.js') }}"></script>
 {% endblock %}
