--- a/reports_app/templates/detail_report.html
+++ b/reports_app/templates/detail_report.html
@@ -22,18 +22,7 @@
                 <p>Сортирувати за %: <button id="sortBtn"><</button></p>
             </div>
         </div>
-        <div class="questions-container tab-content hide" data-content="questions">
-            <div>
-                <h3>Як називається сила, що утримує планети на їхніх орбітах навколо Сонця?</h3>
-                <p>Варіанти відповідді:</p>
-                <div class="questions-block">
-                    <div class="question-block">Земля</div>
-                    <div class="question-block">Земля</div>
-                    <div class="question-block">Земля</div>
-                    <div class="question-block">Земля</div>
-                </div>
-            </div>
-        </div>
+        <div class="questions-container tab-content hide" data-content="questions"></div>
         <div class="chart-container tab-content hide" data-content="graphic">
             <div class="chart-card">
                 <h3>Успішність відповідей по питаннях</h3>
