--- a/reports_app/static/css/detail_report.css
+++ b/reports_app/static/css/detail_report.css
@@ -406,10 +406,7 @@
     display: none;
 }
 .questions-container {
-    width: 98%;
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
+    width: 100%;
 }
 .questions-container > div {
     display: flex;
@@ -422,6 +419,7 @@
 .questions-container div h3 {
     font-weight: 500;
     font-size: 20px;
+    height: 48px;
 }
 .questions-block {
     display: flex;
@@ -430,11 +428,9 @@
     gap: 10px;
 }
 .question-block {
+    font-weight: 500;
+    font-size: 16px;
     background-color: #656565;
     padding: 5px 7px;
     border-radius: 5px;
-}
-.question-block p {
-    font-size: 16px;
-    font-weight: 300;
 }
