--- a/execution_app/static/css/execution.css
+++ b/execution_app/static/css/execution.css
@@ -527,16 +527,16 @@ main {
         height: auto;
     }
     #header {
-        height: 40px;
+        height: 5vh;
     }
     .img-timer {
-        height: 30px;
+        height: 3.7vh;
     }
     #general {
         width: 90vw;
         height: 90vh;
         padding: 30px 0;
-        padding-top: 50px;
+        padding-top: 6vh;
     }
     #question {
         flex-direction: column;
@@ -552,16 +552,16 @@ main {
     #answers {
         flex-direction: column;
         height: 40vh;
-        margin-bottom: 45px;
+        margin-bottom: 5vh;
     }
     #answers button, #answers label {
         height: 100%;
-        width: 95%;
+        width: 100%;
         font-size: 5vw;
     }
     #sendBtn {
         left: 50%;
         transform: translateX(-50%);
-        bottom: 10px;
+        bottom: 0.6vh;
     }
 }
